--- a/app/src/main/res/layout/cadastro_layout.xml
+++ b/app/src/main/res/layout/cadastro_layout.xml
@@ -9,7 +9,6 @@
     <ImageView
         android:layout_width="415dp"
         android:layout_height="710dp"
-        android:layout_gravity="top|start"
         android:scaleType="centerCrop"
         android:src="@drawable/fundo" />
 
@@ -22,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="125dp"
+            android:layout_marginTop="70dp"
             android:src="@drawable/sol" />
 
         <EditText
@@ -43,40 +42,43 @@
             android:padding="10sp"
             android:textColorHint="@color/white" />
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableEnd="@drawable/email"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:padding="10sp"
+            android:textColorHint="@color/white" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:drawableEnd="@drawable/telefone"
+            android:hint="Usuário"
+            android:inputType="phone"
+            android:padding="10sp"
+            android:textColorHint="@color/white" />
+
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lembre a senha"
-            android:textColor="@color/white" />
+            android:text="Aceito os Termos e Condições"
+            android:textColor="@color/white"
+            android:layout_marginLeft="15dp"/>
 
-        <LinearLayout
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="50dp"
-                android:layout_marginTop="10dp"
-                android:text="Entrar" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
-                android:layout_marginTop="11dp"
-                android:text="ESQUECEU A SENHA?"
-                android:textColor="@color/white" />
-
-        </LinearLayout>
-
+            android:layout_gravity="center"
+            android:layout_marginTop="19dp"
+            android:text="Entrar" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="230dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="170dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -87,14 +89,14 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Não é cadastrado?"
+                    android:text="Já é cadastrado?"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cadastre-se"
+                    android:text="Faça login"
                     android:textColor="@color/white"
                     android:textSize="22sp" />
 
